# docs/swagger.yaml
@@ -5,6 +5,33 @@ definitions:
       app:
         type: string
     type: object
+  domain.OrderDTO:
+    properties:
+      id:
+        type: string
+      message:
+        type: string
+    type: object
+  domain.ReqOrderData:
+    properties:
+      message:
+        type: string
+    type: object
+  domain.ResponseError:
+    properties:
+      errorCode:
+        description: 自定義錯誤代碼
+        type: string
+      message:
+        description: 錯誤訊息
+        type: string
+      path:
+        description: API路徑
+        type: string
+      status:
+        description: 錯誤狀態碼
+        type: integer
+    type: object
 info:
   contact: {}
   description: Golang Clean Arch for Gin
@@ -24,6 +51,30 @@ paths:
       summary: 取得App 名稱
       tags:
       - app
+  /orders/{id}:
+    patch:
+      description: Update Order By Id
+      parameters:
+      - description: update message
+        in: body
+        name: default
+        required: true
+        schema:
+          $ref: '#/definitions/domain.ReqOrderData'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success response
+          schema:
+            $ref: '#/definitions/domain.OrderDTO'
+        "400":
+          description: 請求的body、header驗證失敗
+          schema:
+            $ref: '#/definitions/domain.ResponseError'
+      summary: Update Order By Id
+      tags:
+      - order
 securityDefinitions:
   ApiKeyAuth:
     in: header
